# gridraven-analytics

./: FOA_analysis_post_Oct24.ipynb  README.md  analyze_Enelis_results.ipynb  compareM7_FOA_WXstation.ipynb  pyproject.toml  requirements.txt  styling.py
.ipynb_checkpoints/: compare_M7FOA_WXstation-checkpoint.py
datasets/Ammonit data/2021/: D210078-2021-10.csv  D210078-2021-11.csv  D210078-2021-12.csv
datasets/Ammonit data/2022/: D210078-2022-01.csv  D210078-2022-02.csv  D210078-2022-03.csv  D210078-2022-04.csv  D210078-2022-05.csv  D210078-2022-06.csv  D210078-2022-07.csv  D210078-2022-08.csv  D210078-2022-09.csv  D210078-2022-10.csv  D210078-2022-11.csv  D210078-2022-12.csv
datasets/Ammonit data/2023/: D210078-2023-01.csv
datasets/Ammonit data/2025/: D210078-2025-02.csv
datasets/Results from Eneli March 2025/: inference_metrics_full_train_with_form.pq  inference_metrics_full_train_without_form.pq
