[project]
name = "gridraven-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.2.4",
    "matplotlib==3.10.1",
    "seaborn==0.13.2",
    "notebook==7.3.3",
    "openpyxl==3.1.5",
]
